@@ -772,6 +772,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #6263: Fixed syntax error in distutils.cygwincompiler.
+
 - Issue #5201: distutils.sysconfig.parse_makefile() now understands `$$`
   in Makefiles. This prevents compile errors when using syntax like:
   `LDFLAGS='-rpath=\$$LIB:/some/other/path'`. Patch by Floris Bruynooghe.
